switched to java 17 compatibility